WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
57517
Downloading a file fails due to a sandbox violation if the destination path is a symlink
https://bugs.webkit.org/show_bug.cgi?id=57517
Summary
Downloading a file fails due to a sandbox violation if the destination path i...
Anders Carlsson
Reported
2011-03-30 18:04:05 PDT
Downloading a file fails due to a sandbox violation if the destination path is a symlink
Attachments
Patch
(3.85 KB, patch)
2011-03-30 18:06 PDT
,
Anders Carlsson
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-03-30 18:06:18 PDT
Created
attachment 87649
[details]
Patch
Sam Weinig
Comment 2
2011-03-30 18:07:46 PDT
Comment on
attachment 87649
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=87649&action=review
> Source/WebKit2/Shared/mac/SandboxExtensionMac.mm:123 > + char *slashPtr = strrchr(path.data(), '/');
* on wrong side.
Anders Carlsson
Comment 3
2011-03-30 18:11:33 PDT
Committed
r82527
: <
http://trac.webkit.org/changeset/82527
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug