2011-03-30  Anders Carlsson  <andersca@apple.com>

Reviewed by Sam Weinig.

        Downloading a file fails due to a sandbox violation if the destination path is a symlink
        https://bugs.webkit.org/show_bug.cgi?id=57517
        <rdar://problem/8943865>

        Make sure to resolve any symlinks in the given path when creating a sandbox extension handle.
        Note that we can't use realpath or -[NSString stringByResolvingSymlinksInPath], because those calls
        will fail if the pointed to file doesn't exist.

        * Shared/mac/SandboxExtensionMac.mm:
        (WebKit::resolveSymlinksInPath):
        New function that resolves all the symlinks in the given path.

        (WebKit::SandboxExtension::createHandle):
        Call resolveSymlinksInPath on the resulting path.


Canonical link: https://commits.webkit.org/72324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82527 268f45cc-cd09-0410-ab3c-d52691b4dbfc